# flowsight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
fews2board/: app.py
fews2board/api/: __init__.py  chart_studio.py  country.py  landing.py  misc.py  utils.py
fews2board/config/: __init__.py  config.toml
fews2board/db/: db_setup.py  utils.py
fews2board/db/models/: __init__.py  facts.py  framework.py  luigi.py  media_monitoring.py  telegram.py
fews2board/static/css/: chart-style-phase1.css  chart-style-studio.css  chart-style.css  nav.css  style.css
fews2board/static/js/: chart-studio.js  country.js  landing.js  menu-module.js
fews2board/templates/: about.html  chart_studio.html  country.html  landing.html
fews2board/templates/base/: base.html  country-filter-bar.html  footer.html  head.html  head_studio.html  main.html  navbar.html  studio-filter-bar.html  toggler.html
fews2board/templates/chart_studio/: layout.html
fews2board/templates/country/: layout.html  media_monitoring.html  media_monitoring_grid.html  overall.html  search_interest.html  (+1 more)
fews2board/ui/: __init__.py  chart_studio.py  country.py  landing.py
flowsight/: app.py
flowsight/api/: __init__.py  chart_studio.py  country.py  human_mobility_utils.py  landing.py  misc.py  utils.py
flowsight/config/: __init__.py
flowsight/db/: db_setup.py  startup.py  utils.py
flowsight/templates/: about.html  chart_studio.html  country.html
flowsight/ui/: __init__.py  chart_studio.py  country.py  landing.py
(+83 files in other folders)
