[tool.poetry]
name = "flowsight"
version = "0.1.0"
description = ""
authors = ["labaffa <dellarovere.lante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
tomli = "^2.0.1"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-dateutil = "^2.9.0.post0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
orjson = "^3.10.3"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
